Fix bug in login functionality

--- a/index.html
+++ b/index.html
@@ -821,7 +821,7 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
+                <img src="assets/img/testimonials/Jhon.jpeg" class="testimonial-img" alt="">
                 <h3>Jhon Zambrano</h3>
                 <h4>Ing. Tecnologías de la Información</h4>
                 <div class="stars">
