--- a/index.html
+++ b/index.html
@@ -927,8 +927,7 @@
             <div class="content px-xl-5">
               <h3><strong>Preguntas</strong> frecuentes</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Duis aute irure dolor in reprehenderit
+                Nuestras preguntas frecuentes se actualizan periódicamente para brindarle la información más actualizada.
               </p>
             </div>
 
@@ -939,13 +938,13 @@
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#faq-content-1">
                     <i class="bi bi-question-circle question-icon"></i>
-                    Non consectetur a erat nam at lectus urna duis?
+                    ¿Cuándo y cómo fue creada la Fundación "Avanzando Juntos"?
+                  
                   </button>
                 </h3>
                 <div id="faq-content-1" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                   <div class="accordion-body">
-                    Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur
-                    gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+                    La Fundación Avanzando Juntos fue creada según la Resolución Administrativa No. 009-DDSD-2022 del Ministerio de Inclusión Económica y Social con fecha 6 de abril del 2022, otorgándose la Personalidad Jurídica y aprobándose los estatutos.
                   </div>
                 </div>
               </div><!-- # Faq item-->
@@ -955,14 +954,12 @@
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#faq-content-2">
                     <i class="bi bi-question-circle question-icon"></i>
-                    Feugiat scelerisque varius morbi enim nunc faucibus a pellentesque?
+                    ¿Cuál es la misión principal de la Fundación?
                   </button>
                 </h3>
                 <div id="faq-content-2" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                   <div class="accordion-body">
-                    Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id
-                    donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque
-                    elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
+                    La misión de la fundación es promover el derecho a la educación mediante convenios de ayuda mutua, con énfasis en grupos de atención prioritaria, buscando el desarrollo integral de las capacidades individuales y colectivas para la transformación de la sociedad y la erradicación de la pobreza.
                   </div>
                 </div>
               </div><!-- # Faq item-->
@@ -972,15 +969,12 @@
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#faq-content-3">
                     <i class="bi bi-question-circle question-icon"></i>
-                    Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi?
+                    ¿Cuáles son los valores fundamentales de la Fundación Avanzando Juntos?
                   </button>
                 </h3>
                 <div id="faq-content-3" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                   <div class="accordion-body">
-                    Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar
-                    elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque
-                    eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis
-                    sed odio morbi quis
+                    Los valores de la Fundación incluyen solidaridad, transparencia, independencia, igualdad, compromiso y coherencia.
                   </div>
                 </div>
               </div><!-- # Faq item-->
@@ -990,15 +984,13 @@
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#faq-content-4">
                     <i class="bi bi-question-circle question-icon"></i>
-                    Ac odio tempor orci dapibus. Aliquam eleifend mi in nulla?
+                    ¿Cuáles son los objetivos específicos de la Fundación?
                   </button>
                 </h3>
                 <div id="faq-content-4" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                   <div class="accordion-body">
                     <i class="bi bi-question-circle question-icon"></i>
-                    Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id
-                    donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque
-                    elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
+                    La Fundación tiene como objetivos asesorar, fomentar y desarrollar oportunidades para la capacitación, enseñanza y emprendimientos productivos individuales, familiares y de empleo para grupos de atención prioritaria mediante autofinanciamiento o ayuda de la empresa pública y privada.
                   </div>
                 </div>
               </div><!-- # Faq item-->
@@ -1008,14 +1000,12 @@
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#faq-content-5">
                     <i class="bi bi-question-circle question-icon"></i>
-                    Tempus quam pellentesque nec nam aliquam sem et tortor consequat?
+                    ¿Con qué organizaciones la Fundación ha firmado convenios y colaboraciones?
                   </button>
                 </h3>
                 <div id="faq-content-5" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                   <div class="accordion-body">
-                    Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in.
-                    Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est.
-                    Purus gravida quis blandit turpis cursus in
+                    Hasta el momento, la Fundación ha firmado convenios, como el Centro de Capacitación BES STO. DGO, tambien un convenio de vinculación con el INSTITUTO SUPERIOR TECNOLÓGICO TSA’CHILA. Este acuerdo lleva el nombre "ILUMINANDO VIDAS, PROYECTO DE MANTENIMIENTO ELÉCTRICO Y CAPACITACIONES PARA SOCIEDAD VULNERABLE EN SANTO DOMINGO DE LOS TSÁCHILAS," y fue aprobado mediante resolución VC-SIES-ISTT-011-2023.
                   </div>
                 </div>
               </div><!-- # Faq item-->
