--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <li><a class="nav-link scrollto" href="index.html#services">Cursos</a></li>
           <li><a class="nav-link scrollto" href="index.html#portfolio">Galería</a></li>
           <li><a class="nav-link scrollto" href="index.html#team">Auspiciantes</a></li>
-          <li><a href="blog.html">Blog</a></li>
+          <!-- <li><a href="blog.html">Blog</a></li> -->
           <li><a class="nav-link scrollto" href="index.html#contact">Contacto</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle d-none"></i>
@@ -349,14 +349,14 @@
 
         <div class="clients-slider swiper">
           <div class="swiper-wrapper align-items-center">
-            <div class="swiper-slide"><img src="assets/img/clients/client-1.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-2.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-3.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-4.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-5.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-6.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-7.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-8.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/espe.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/cnel-removebg-preview.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/BES-removebg-preview.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/istt-removebg-preview.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/espe.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/cnel-removebg-preview.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/BES-removebg-preview.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/istt-removebg-preview.png" class="img-fluid" alt=""></div>
           </div>
         </div>
 
@@ -1015,7 +1015,7 @@
           </div>
 
           <div class="col-lg-5 align-items-stretch order-1 order-lg-2 img"
-            style='background-image: url("assets/img/faq.jpg");'>&nbsp;</div>
+            style='background-image: url("assets/img/faq.jpg"); '>&nbsp;</div>
         </div>
 
       </div>
@@ -1274,7 +1274,7 @@
     </section><!-- End Team Section -->
 
     <!-- ======= Recent Blog Posts Section ======= -->
-    <section id="recent-blog-posts" class="recent-blog-posts">
+    <!-- <section id="recent-blog-posts" class="recent-blog-posts">
 
       <div class="container" data-aos="fade-up">
 
@@ -1335,7 +1335,7 @@
 
       </div>
 
-    </section><!-- End Recent Blog Posts Section -->
+    </section>End Recent Blog Posts Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
