Delete unused image files

--- a/index.html
+++ b/index.html
@@ -404,10 +404,8 @@
       <div class="container-fluid p-0" data-aos="fade-up">
 
         <div class="row g-0">
-          <div class="col-lg-6 video-play position-relative">
-            <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox play-btn"></a>
-          </div>
-          <div class="col-lg-6">
+         
+          <div class="col-lg-12">
             <div class="content d-flex flex-column justify-content-center h-100">
               <h3>Participar de Voluntariado en la Fundación</h3>
               <p class="fst-italic">
@@ -426,7 +424,7 @@
                 nosotros a través de <a
                   href="mailto:info@fundacionavanzandojuntos.org">avanzandojuntosfundacion@gmail.com</a>. Estamos
                 emocionados de trabajar contigo para hacer un impacto positivo en nuestra comunidad.</p>
-              <a href="#" class="read-more align-self-start"><span>Me interesa</span><i
+              <a href="#" class="read-more align-self-start text-center"><span>Me interesa</span><i
                   class="bi bi-arrow-right"></i></a>
             </div>
           </div>
@@ -776,7 +774,7 @@
               </div>
               <div class="details position-relative">
                 <div class="icon">
-                  <i class="bi bi-pc-display-horizontal"></i>
+                  <i class="bi bi-person-circle"></i>
                 </div>
                 <a href="#" class="stretched-link">
                   <h3>SERVICIO DE CORTES DE CABELLO, PEINADOS Y
@@ -795,7 +793,7 @@
               </div>
               <div class="details position-relative">
                 <div class="icon">
-                  <i class="bi bi bi-hammer"></i>
+                  <i class="bi bi-award"></i>
                 </div>
                 <a href="#" class="stretched-link">
                   <h3>DISEÑO Y COLOR CAPILAR </h3>
@@ -849,9 +847,7 @@
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium
-                  quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
-                  <i class="bi bi-quote quote-icon-right"></i>
+                  La Fundación ofrece cursos muy prácticos que nos ayudan a tener mejores oportunidades laborales. El trato es espectacular.                  <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
             </div><!-- End testimonial item -->
@@ -867,9 +863,7 @@
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis
-                  quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
-                  <i class="bi bi-quote quote-icon-right"></i>
+                  Los miembros de la fundación muestran un profundo compromiso hacia aquellos que más lo necesitan, ya sean adultos mayores, niños u otros. Esta dedicación es palpable desde el primer encuentro. El trato que ofrecen a todas las personas es excepcional, creando un ambiente cálido y acogedor que se siente desde el primer momento.                  <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
             </div><!-- End testimonial item -->
@@ -885,8 +879,7 @@
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim
-                  tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                  Es realmente reconfortante experimentar cómo esta fundación no solo brinda ayuda, sino que también visita asiduamente los hogares de ancianos. La gratificación que se siente al ser testigo de su dedicación hacia los adultos mayores es inigualable. Están haciendo una diferencia significativa en las vidas de aquellos que más lo necesitan, y es un honor ser parte de esta iniciativa altruista.
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
@@ -903,8 +896,7 @@
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit
-                  minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+                  Es realmente reconfortante experimentar cómo esta fundación no solo brinda ayuda, sino que también visita asiduamente los hogares de ancianos. La gratificación que se siente al ser testigo de su dedicación hacia los adultos mayores es inigualable. Están haciendo una diferencia significativa en las vidas de aquellos que más lo necesitan, y es un honor ser parte de esta iniciativa altruista.
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
@@ -921,9 +913,8 @@
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa
-                  labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
-                  <i class="bi bi-quote quote-icon-right"></i>
+                  Me agrada mucho como la Fundación Avanzando Juntos se enfoca en ayudar a los adultos mayores. Su dedicación y compromiso hacia esta causa es admirable.                  <i class="bi bi-quote quote-icon-right"></i>
+                  
                 </p>
               </div>
             </div><!-- End testimonial item -->
@@ -1414,20 +1405,21 @@
           </div>
 
           <div class="col-lg-8">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <form action="https://formspree.io/f/mbjnlyvw" method="post" role="form" class="php-email-form">
               <div class="row">
+                <h3 class="text-center">Formulario de Contacto </h3>
                 <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Nombre" required>
+                  <input type="text" name="nombre" class="form-control" id="name" placeholder="Nombre" required>
                 </div>
                 <div class="col-md-6 form-group mt-3 mt-md-0">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Correo" required>
+                  <input type="email" class="form-control" name="correo" id="email" placeholder="Correo" required>
                 </div>
               </div>
               <div class="form-group mt-3">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Asunto" required>
+                <input type="text" class="form-control" name="asunto" id="subject" placeholder="Asunto" required>
               </div>
               <div class="form-group mt-3">
-                <textarea class="form-control" name="message" placeholder="Mensaje" required></textarea>
+                <textarea class="form-control" name="mensaje" placeholder="Mensaje" required></textarea>
               </div>
               <div class="my-3">
                 <div class="loading">Cargando</div>
