Delete unused course images and update link to haircut service

--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@
                 <div class="icon">
                   <i class="bi bi-person"></i>
                 </div>
-                <a href="#" class="stretched-link">
+                <a href="servicio-corte-cabello-hombre.html" class="stretched-link">
                   <h3>SERVICIO DE CORTES DE CABELLO DE HOMBRE</h3>
                 </a>
                 <p>En el área de Artes y Artesanía, nos enfocamos en la Especialidad de Peluquería y Belleza, con un
