Update links and titles for courses

--- a/electricidad-basica.html
+++ b/electricidad-basica.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>SERVICIO DE CORTES DE CABELLO DE HOMBRE</title>
+  <title>MANICURA, PEDICURA Y UÑAS ACRILICAS
+  </title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -87,7 +88,7 @@
                 <img src="assets/img/cursos/corte de hombres.jpeg" alt="" class="img-fluid">
               </div>
 
-              <h2 class="title">SERVICIO DE CORTES DE CABELLO DE HOMBRE</h2>
+              <h2 class="title">MANICURA, PEDICURA Y UÑAS ACRILICAS</h2>
 
               <div class="meta-top">
                 <ul>
@@ -102,83 +103,23 @@
               <div class="content">
 
                 <p>
-                  El curso inicia con el diagnóstico, anatomía del cabello y del
-                  cuero cabelludo análisis del cabello y características
-                  morfológicas del cliente, lo cual nos va a permitir recolectar
-                  información para seleccionar el estilo y la técnica que mejor
-                  permita cumplir con los requerimientos del cliente. Una vez
-                  seccionada la técnica se presentará un esquema gráfico que la
-                  representará, las proyecciones, particiones y longitudes, para
-                  determinar y explicar el proceso de corte. </p>
+                  Este curso proporciona conocimientos necesarios para aplicar y mantener el
+                  cuidado de las uñas de forma segura y efectiva a través de las técnicas a
+                  realizar por lo tanto como saber utilizar los productos para realizar los diseños
+                  en las uñas es muy importante, saber cómo utilizar cada herramienta para
+                  las diferentes técnicas es de vitales importancias es por esto que este curso
+                  le ofrece una formación especializada para el cuidado de las uñas. </p>
                 <p>
-                  Finalmente se realizará el estilo de corte de manera práctica,
-                  considerando las técnicas establecidas y el protocolo de
-                  bioseguridad, donde el estudiante demostrará su habilidad en el
-                  manejo de herramientas, el cabello y productos cosméticos, una
-                  vez finalizado el estilo de corte, el estudiante evaluará junto con
-                  el cliente el resultado final.
+                  En esta
+                  área es muy importante la imagen personal porque tenemos un acercamiento
+                  continuo con el cliente el cuidado de cada área de trabajo hará que cada
+                  cliente quiera regresar, saber tratar al cliente con ética profesional es algo
+                  que cada profesional debe saber. Por eso en el curso les garantizamos las
+                  técnicas y los procedimientos necesarios para obtener uñas sanas y fuertes.
                 </p>
 
 
-                <div class="container mt-5">
-                  <h2 class="mb-4">Técnicas de Corte</h2>
-
-                  <ul class="list-group">
-                    <li class="list-group-item"> <strong>El corte militar</strong>
-                      <ul class="list-group">
-                        <li class="list-group-item">✓ Corte zumbido</li>
-                        <li class="list-group-item">✓ Corte militar desvanecido</li>
-                        <li class="list-group-item">✓ Corte militar desvanecido con volumen</li>
-                        <li class="list-group-item">✓ Rapado al cero</li>
-                      </ul>
-                    </li>
-                    <li class="list-group-item"> <strong>Corte tradicional o clásico</strong></li>
-                    <li class="list-group-item"><strong>Corte low fade</strong>
-                      <ul class="list-group">
-                        <li class="list-group-item">✓ Técnica high-fade</li>
-                        <li class="list-group-item">✓ Técnica mid-fade</li>
-                        <li class="list-group-item">✓ Técnica low-fade</li>
-                      </ul>
-                    </li>
-                    <li class="list-group-item"> <strong>Técnica burts-fade</strong> </li>
-                    <li class="list-group-item"><strong>Corte mullet clásico</strong> </li>
-                    <li class="list-group-item"><strong>Corte mullet con flequillo</strong> </li>
-                    <li class="list-group-item"><strong>Corte moderno</strong>
-                      <ul class="list-group">
-                        <li class="list-group-item">✓ Tribales</li>
-                        <li class="list-group-item">✓ Líneas</li>
-                        <li class="list-group-item">✓ Rasgos</li>
-                      </ul>
-                    </li>
-                    <li class="list-group-item">Corte 7
-                      <ul class="list-group">
-                        <li class="list-group-item">✓ Corte 7 sombreado</li>
-                        <li class="list-group-item">✓ Corte 7 en V</li>
-                        <li class="list-group-item">✓ Corte 7 degradado</li>
-                        <li class="list-group-item">Corte mohicano</li>
-
-                      </ul>
-                    </li>
-                    <li class="list-group-item"><strong>Técnicas de desvanecimiento</strong>
-                      <ul class="list-group">
-                        <li class="list-group-item">✓ Técnicas de estratificación y graduación</li>
-                        <li class="list-group-item">✓ Métodos de desvanecimiento</li>
-                        <li class="list-group-item">✓ Modelado de la línea del cabello</li>
-                        <li class="list-group-item">✓ Consejos de peinado</li>
-                      </ul>
-                    </li>
-                    <li class="list-group-item"><strong>Técnica de la tijera sobre el peine</strong> </li>
-                    <!-- SEGÚN LOS GRADOS DE ELEVACIÓN O PROYECCION -->
-                    <li class="list-group-item"><strong>SEGÚN LOS GRADOS DE ELEVACIÓN O PROYECCIÓN</strong>
-                      <ul class="list-group">
-                        <li class="list-group-item">• O GRADOS</li>
-                        <li class="list-group-item">• 45 GRADOS</li>
-                        <li class="list-group-item">• 90 GRADOS</li>
-                        <li class="list-group-item">• 180 GRADOS</li>
-                      </ul>
-                    </li>
-                  </ul>
-                </div>
+                
 
 
               </div><!-- End post content -->
@@ -196,7 +137,17 @@
                   <li><a href="#">Marketing</a></li>
                 </ul>
               </div> -->
+              <h2 class="mb-4">Habilidades a desarrollar</h2>
 
+  <ul class="list-group">
+    <li class="list-group-item">✓ Identificar las diferentes tipos de enfermedades en las uñas para poder realizar un buen trabajo. Condicionalmente, en una uña afectada no se puede realizar uñas artificiales.</li>
+    <li class="list-group-item">✓ Conocer los diferentes tipos de herramientas para realizar la limpieza de las uñas, ya que el procedimiento es diferente tanto en pies como en manos.</li>
+    <li class="list-group-item">✓ Conocer bien la asepsia para brindar un servicio profesional es el éxito de cada manicurista porque evitamos así el contagio de varias enfermedades en las uñas.</li>
+    <li class="list-group-item">✓ Las técnicas que se realizan en las uñas son varias. Lo importante es realizar bien las diferentes técnicas.</li>
+    <li class="list-group-item">✓ En las uñas acrílicas, debemos tener en cuenta la limpieza en seco para no debilitar la uña natural.</li>
+    <li class="list-group-item">✓ Mantener el cuidado de las uñas en un perfecto estado ayuda a la estética tanto en hombres como en mujeres.</li>
+    <li class="list-group-item">✓ Conocer los riesgos y precauciones necesarias al utilizar productos químicos en las uñas es algo de vital importancia.</li>
+  </ul>
             </article><!-- End blog post -->
 
 
@@ -209,8 +160,8 @@
                 <form action="https://formspree.io/f/mbjnlyvw">
                   <div class="row">
                     <div class="col-12">
-                      <select class="form-select" name="curso" id="selectCortes" aria-label="Selecciona un tipo de corte de cabello">
-                        <option selected >SERVICIO DE CORTES DE CABELLO DE HOMBRE</option>
+                      <select class="form-select" id="selectCortes" aria-label="Selecciona un tipo de corte de cabello">
+                        <option selected>SERVICIO DE CORTES DE CABELLO DE HOMBRE</option>
                       </select>
                     </div>
                     <div class="col-md-6 mt-2 form-group">
@@ -252,7 +203,7 @@
                   <tbody>
                     <tr>
                       <th scope="row">Curso</th>
-                      <td>SERVICIO DE CORTES DE CABELLO DE HOMBRE</td>
+                      <td>MANICURA, PEDICURA Y UÑAS ACRÍLICAS</td>
                     </tr>
                     <tr>
                       <th scope="row">Área</th>
@@ -272,28 +223,24 @@
                     </tr>
                   </tbody>
                 </table>
-                  <h2>Habilidades a Desarrollar</h2>
+                  <h2 class="mb-4">Técnicas en Uñas</h2>
+                
                   <ul class="list-group">
-                    <li class="list-group-item"> <strong>Realizar diagnóstico capilar.</strong> </li>
-                    <li class="list-group-item"><strong>Efectuar servicios de cortes de cabello,</strong>
-                      <ul class="list-group">
-                        <li class="list-group-item">✓Con máquina</li>
-                        <li class="list-group-item">✓Difuminados</li>
-                        <li class="list-group-item">✓Degradados</li>
-                        <li class="list-group-item">✓Tribales</li>
-                        <li class="list-group-item">✓Estilos de peinado</li>
-                        <li class="list-group-item">✓Con tijeras</li>
-                      </ul>
-                    </li>
-                    <li class="list-group-item"><strong> Aplicar procedimientos técnicos establecidos.</strong> </li>
-                    <li class="list-group-item"> <strong>Normas de seguridad e higiene, con base en las características
-                        y requerimientos del cliente.</strong></li>
+                    <li class="list-group-item"><strong>✓ Uñas Encapsuladas</strong></li>
+                    <li class="list-group-item"><strong>✓ Uñas en Mano Alzada</strong></li>
+                    <li class="list-group-item"><strong>✓ Uñas Esculpidas</strong></li>
+                    <li class="list-group-item"><strong>✓ Acripie</strong></li>
+                    <li class="list-group-item"><strong>✓ Uñas en 3D</strong></li>
+                    <li class="list-group-item"><strong>✓ Baby Boomer</strong></li>
+                    <li class="list-group-item"><strong>✓ Uñas Cromi</strong></li>
+                    <li class="list-group-item"><strong>✓ Uñas en French</strong></li>
+                    <li class="list-group-item"><strong>✓ Uñas Velve</strong></li>
                   </ul>
-                  <div class="container mt-5">
-                    <a href="https://wa.me/593967792409" class="btn btn-success">
-                      <i class="bi bi-whatsapp"></i> Contactar por WhatsApp
-                    </a>
-                  </div>
+                <div class="container mt-5">
+                  <a href="https://wa.me/593967792409" class="btn btn-success">
+                    <i class="bi bi-whatsapp"></i> Contactar por WhatsApp
+                  </a>
+                </div>
               </div><!-- End sidebar tags-->
             </div><!-- End Blog Sidebar -->
           </div>
