--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
                   programa formativo que tiene una duración total de 60 horas. Este curso se llevará a cabo tres días a
                   la semana, proporcionando a los participantes una sólida base de conocimientos y habilidades en el
                   ámbito de la peluquería y la belleza.</p>
-                  <a href="#" class="stretched-link btn btn-success  mt-3">Leer más</a>
+                  <a href="servicio-corte-cabello-hombre.html" class="stretched-link btn btn-success  mt-3">Leer más</a>
 
               </div>
             </div>
@@ -735,14 +735,14 @@
                 <div class="icon">
                   <i class="bi bi-snapchat"></i>
                 </div>
-                <a href="#" class="stretched-link">
+                <a href="manicura-pedicure-y-uñas-acrilicas.html" class="stretched-link">
                   <h3>MANICURA, PEDICURA Y UÑAS ACRILICAS</h3>
                 </a>
                 <p>En el ámbito del Área de Artes y Artesanía, se presenta la Especialidad de Peluquería y Belleza, un
                   curso con una duración total de 60 horas. Este programa formativo se desarrolla a lo largo de tres
                   días a la semana, ofreciendo a los participantes la oportunidad de sumergirse en los fundamentos y
                   técnicas de la peluquería y la belleza.</p>
-                  <a href="#" class="stretched-link btn btn-success  mt-3">Leer más</a>
+                  <a href="manicura-pedicure-y-uñas-acrilicas.html" class="stretched-link btn btn-success  mt-3">Leer más</a>
 
               </div>
             </div>
@@ -757,11 +757,11 @@
                 <div class="icon">
                   <i class="bi bi-lightning-charge-fill"></i>
                 </div>
-                <a href="#" class="stretched-link">
+                <a href="electricidad-basica.html" class="stretched-link">
                   <h3>ELECTRICIDAD BÁSICA</h3>
                 </a>
                 <p>Un programa de formación diseñado para abordar la reparación, manejo y mantenimiento de instalaciones eléctricas en entornos residenciales. Este curso tiene una duración total de 60 horas, distribuidas en un horario de tres días a la semana. </p>
-                <a href="#" class="stretched-link btn btn-success  mt-3">Leer más</a>
+                <a href="electricidad-basica.html" class="stretched-link btn btn-success  mt-3">Leer más</a>
 
               </div>
             </div>
