add page of Servicio de Cortes de cabello, peinados y alisados, and the form was corrected

--- a/index.html
+++ b/index.html
@@ -776,12 +776,12 @@
                 <div class="icon">
                   <i class="bi bi-person-circle"></i>
                 </div>
-                <a href="#" class="stretched-link">
+                <a href="servicio-de-cortes-de-cabello-peinados-y-alisados.html" class="stretched-link">
                   <h3>SERVICIO DE CORTES DE CABELLO, PEINADOS Y
                     ALISADOS </h3>
                 </a>
                 <p>Un curso formativo con una duración total de 60 horas, distribuidas a lo largo de tres días a la semana. Este programa tiene como objetivo principal desarrollar habilidades especializadas en el ámbito de la peluquería y la belleza.</p>
-                <a href="#" class="stretched-link btn btn-success  mt-3">Leer más</a>
+                <a href="servicio-de-cortes-de-cabello-peinados-y-alisados.html" class="stretched-link btn btn-success  mt-3">Leer más</a>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -1409,7 +1409,7 @@
               <div class="row">
                 <h3 class="text-center">Formulario de Contacto </h3>
                 <div class="col-md-6 form-group">
-                  <input type="text" name="nombre" class="form-control" id="name" placeholder="Nombre" required>
+                  <input type="text" name="nombre" class="form-control" id="name" placeholder="Nombre " required>
                 </div>
                 <div class="col-md-6 form-group mt-3 mt-md-0">
                   <input type="email" class="form-control" name="correo" id="email" placeholder="Correo" required>
